fix: alignment in coupon

--- a/store/src/styles/components/coupon.scss
+++ b/store/src/styles/components/coupon.scss
@@ -155,7 +155,7 @@
 .hern-upfront-coupon__form__apply-btn {
    color: white;
    padding: 10px 28px 28px 28px;
-   margin: 0px 20px;
+   margin: 0px 8px;
    text-transform: uppercase;
    text-align: center;
    width: fit-content;
